@@ -1,5 +1,9 @@
 1999-08-31  Dave Camp  <campd@oit.edu>
 
+	* gconf/gconf.c (g_conf_is_initialized): New function.
+
+1999-08-31  Dave Camp  <campd@oit.edu>
+
 	* gconf/gconftool.c (main): Changed --dir-exists to return 0 if 
 	the dir exists, and 2 if it does not.
 
